--- a/Udemy.AdvertisementApp.Business/Udemy.AdvertisementApp.Business.csproj
+++ b/Udemy.AdvertisementApp.Business/Udemy.AdvertisementApp.Business.csproj
@@ -1,15 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.5.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Udemy.AdvertisementApp.DataAccess\Udemy.AdvertisementApp.DataAccess.csproj" />
+    <ProjectReference Include="..\Udemy.AdvertisementApp.Dtos\Udemy.AdvertisementApp.Dtos.csproj" />
   </ItemGroup>
 
 </Project>
